@@ -8,16 +8,10 @@ dependencies {
     implementation(project(":javascad"))
     implementation(project(":cad3d"))
     implementation(project(":plugin"))
-
-    implementation(files("../viewer/libs/jogamp-fat.jar"))
 }
 
 application {
-    mainClass.set("com.github.grishberg.cad3d.Main")
-    applicationDefaultJvmArgs = listOf(
-        "--add-exports=java.desktop/sun.awt=ALL-UNNAMED",
-        "--add-opens=java.desktop/sun.awt=ALL-UNNAMED"
-    )
+    mainClass.set("com.github.grishberg.cad3d.pccase.PcCaseAppKt")
 }
 
 kotlin {
